--- a/styles.css
+++ b/styles.css
@@ -515,7 +515,7 @@ footer .footer-logo-right h2 {
     align-items: center;
   }
   .step-card-item {
-    width: 90%;
+    width: 300px;
     height: 240px;
     margin-bottom: 10px;
   }
